my-website/versioned_docs/version-1.7.0/api/category/credentials.mdx
---
title: "Credentials"
sidebarTitle: "Credentials"
description: "alias of S3AccessKeyCredentials"
---
import { ParamField, ResponseField } from '@site/src/components/ApiField';


<a id="tabsdata.AwsGlueSchemaRegistryCredentialsSpec"></a>
<details>
<summary>AwsGlueSchemaRegistryCredentialsSpec</summary>


alias of [`S3AccessKeyCredentials`](/versions/1.7.0/api/module/tabsdata#tabsdata.S3AccessKeyCredentials)


</details>

<a id="tabsdata.AzureAccountKeyCredentials"></a>
<details>
<summary>AzureAccountKeyCredentials</summary>


```python
class AzureAccountKeyCredentials(
    account_name: str | Secret,
    account_key: str | Secret,
)
```

Bases: `AzureCredentials`

Credentials class to access Azure using account key credentials (account name and account key).

**Categories:** credentials

**Variables:**

- account_name ( Secret ) – The Azure account name.
- account_key ( Secret ) – The Azure account key.
- dict ( to_dict ( ) -> ) – Convert the AzureAccountNameKeyCredentials object to a dictionary

<a id="tabsdata.AzureAccountKeyCredentials.account_key"></a>
<ResponseField name="account_key" type="Secret">
The Azure account key.

**Type:** Secret
</ResponseField>

<a id="tabsdata.AzureAccountKeyCredentials.account_name"></a>
<ResponseField name="account_name" type="Secret">
The Azure account name.

**Type:** Secret
</ResponseField>


</details>

<a id="tabsdata.ConfluentSchemaRegistryCredentialsSpec"></a>
<details>
<summary>ConfluentSchemaRegistryCredentialsSpec</summary>


alias of [`UserPasswordCredentials`](/versions/1.7.0/api/module/tabsdata#tabsdata.UserPasswordCredentials)


</details>

<a id="tabsdata.GCPServiceAccountKeyCredentials"></a>
<details>
<summary>GCPServiceAccountKeyCredentials</summary>


```python
class GCPServiceAccountKeyCredentials(
    service_account_key: str | Secret,
)
```

Bases: `GCPCredentials`

Credentials class to store the credentials needed to access GCS using account key credentials (service account key).

**Categories:** credentials

**Variables:**

- service_account_key ( Secret ) – The GCS service account key.
- dict ( to_dict ( ) -> ) – Convert the GCPServiceAccountKeyCredentials object to a dictionary

<a id="tabsdata.GCPServiceAccountKeyCredentials.service_account_key"></a>
<ResponseField name="service_account_key" type="Secret">
The GCS service account key.

**Type:** Secret
</ResponseField>


</details>

<a id="tabsdata.KafkaCredentialsSpec"></a>
<details>
<summary>KafkaCredentialsSpec</summary>


alias of [`UserPasswordCredentials`](/versions/1.7.0/api/module/tabsdata#tabsdata.UserPasswordCredentials)


</details>

<a id="tabsdata.S3AccessKeyCredentials"></a>
<details>
<summary>S3AccessKeyCredentials</summary>


```python
class S3AccessKeyCredentials(
    aws_access_key_id: str | Secret,
    aws_secret_access_key: str | Secret,
)
```

Bases: `S3Credentials`

Credentials class to access an S3 bucket using access key credentials (access key id and secret access key).

**Categories:** credentials

**Variables:**

- aws_access_key_id ( Secret ) – The AWS access key id.
- aws_secret_access_key ( Secret ) – The AWS secret access key.
- dict ( to_dict ( ) -> ) – Convert the S3AccessKeyCredentials object to a dictionary

<a id="tabsdata.S3AccessKeyCredentials.aws_access_key_id"></a>
<ResponseField name="aws_access_key_id" type="Secret">
The AWS access key id.

**Type:** Secret
</ResponseField>

<a id="tabsdata.S3AccessKeyCredentials.aws_secret_access_key"></a>
<ResponseField name="aws_secret_access_key" type="Secret">
The AWS secret access key.

**Type:** Secret
</ResponseField>


</details>

<a id="tabsdata.SalesforceTokenCredentials"></a>
<details>
<summary>SalesforceTokenCredentials</summary>


```python
class SalesforceTokenCredentials(
    username: str | Secret,
    password: str | Secret,
    security_token: str | Secret,
)
```

Bases: `SalesforceCredentials`

Credentials class to store the credentials needed to access a Salesforce using a username, a password and a token.

**Categories:** credentials

**Variables:**

- username ( Secret ) – The username to access Salesforce.
- password ( Secret ) – The password to access Salesforce.
- security_token ( Secret ) – The security token to access Salesforce.
- dict ( to_dict ( ) -> ) – Convert the AzureAccountNameKeyCredentials object to a dictionary

<a id="tabsdata.SalesforceTokenCredentials.password"></a>
<ResponseField name="password" type="Secret">
The password to access Salesforce.

**Type:** Secret
</ResponseField>

<a id="tabsdata.SalesforceTokenCredentials.security_token"></a>
<ResponseField name="security_token" type="Secret">
The security token to access Salesforce.

**Type:** Secret
</ResponseField>

<a id="tabsdata.SalesforceTokenCredentials.username"></a>
<ResponseField name="username" type="Secret">
The username to access Salesforce.

**Type:** Secret
</ResponseField>


</details>

<a id="tabsdata.UserPasswordCredentials"></a>
<details>
<summary>UserPasswordCredentials</summary>


```python
class UserPasswordCredentials(
    user: str | Secret,
    password: str | Secret,
)
```

Bases: `Credentials`

Represents credentials consisting of a user and a password.

This class is used to manage and securely handle user and password credentials. It includes functionalities to set user and password details, convert them into a dictionary representation, and provide a string representation for debugging purposes.

**Categories:** credentials

<a id="tabsdata.UserPasswordCredentials.password"></a>
<ResponseField name="password" type="Secret">
The password.

**Type:** Secret
</ResponseField>

<a id="tabsdata.UserPasswordCredentials.user"></a>
<ResponseField name="user" type="Secret">
The user.

**Type:** Secret
</ResponseField>


</details>
